vmstat 使用；Java8 学习；面试题相关整理